--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_2330782_ke5uw6wk819.css">
-
-    
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_2330782_ke5uw6wk819.css"> -->
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_2330782_j333yrlk06.css" />
+    <title>每时每课</title>
   </head>
   <body>
     <noscript>
